k8s/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akhq
  namespace: oms
  labels:
    app: akhq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akhq
  template:
    metadata:
      labels:
        app: akhq
    spec:
      containers:
        - name: akhq
          image: tchiotludo/akhq:0.25.1
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: akhq
  namespace: oms
  labels:
    app: akhq
spec:
  selector:
    app: akhq
  ports:
    - name: http
      port: 80
      targetPort: http
